syntax = "proto3";

option java_package = "in.ashwanthkumar.suuchi.rpc.generated";
option java_outer_classname = "SuuchiRPC";

// The Ping service definition.
service PingService {
    rpc Ping (PingRequest) returns (PingResponse);
}
message PingRequest {
}
message PingResponse {
    bool status = 1;
}

// SuuchiRead service which can be used for serving read-only datasets
service SuuchiRead {
    rpc Get (GetRequest) returns (GetResponse);
    // TODO - Add scan method to this service
}
message GetRequest {
    bytes key = 1;
}
message GetResponse {
    bytes key = 1;
    bytes value = 2;
}

// SuuchiPut service which can be used for taking in writes
service SuuchiPut {
    rpc Put (PutRequest) returns (PutResponse);
    rpc BulkPut (stream PutRequest) returns (PutResponse);
}
message PutRequest {
    bytes key = 1;
    bytes value = 2;
}
message PutResponse {
    bool status = 1;
}
